updated the files as suggested the changes